v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
spec:
  replicas: 9
  selector:
    matchLabels:
      app: nginx-canary
      version: v1

  template:
    metadata:
      labels:
        app: nginx-canary
        version: v1

    spec:
      containers:
      - name: nginx
        image: nginx:latest
