v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx-canary
      version: v2

  template:
    metadata:
      labels:
        app: nginx-canary
        version: v2

    spec:
      containers:
      - name: nginx
        image: nginx:1.31
