blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-bg-svc
spec:
  selector:
    app: nginx
    version: blue

  ports:
  - port: 80
    targetPort: 80

  type: LoadBalancer
