service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary-svc

spec:
  selector:
    app: nginx-canary

  ports:
  - port: 80
    targetPort: 80

  type: LoadBalancer
