grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: grafana.34-78-190-242.nip.io

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: grafana
            port:
              number: 80
